src/pages/convert/campaigns/providers/CampaignDetailsForm/style.less
@import (reference) '~@gorgias/design-tokens/dist/css/layout.less';
@import (reference) '~css/new/mixins';

:local {
    .pageContainer {
        position: relative;

        width: 100%;
        min-height: calc(100% - 60px - 52px);

        display: flex;
        flex-direction: column;

        background-color: var(--neutral-grey-1);

        @media only screen and (min-width: 1024px) {
            flex-direction: row;
        }
    }

    .loader {
        padding: @layout-spacing-xs @layout-spacing-m;
    }

    .bannerWrapper {
        padding: 0 @layout-spacing-l @layout-spacing-l;
    }

    .formWrapper {
        width: 100%;

        padding: @layout-spacing-l;

        background-color: var(--neutral-grey-0);

        .section {
            margin-top: @layout-spacing-l;
        }

        .addTriggerButton {
            margin-top: @layout-spacing-s;
        }

        @media @desktops {
            max-width: 728px;
        }
    }

    .campaignPreview {
        margin-left: auto;
        margin-right: auto;

        background: transparent;

        @media @xlarge-desktops {
            position: sticky;
            top: @layout-spacing-m;

            margin-left: @layout-spacing-l;
        }
    }
}

